styles.css
@import url("https://fonts.googleapis.com/css2?family=Syne&display=swap");
@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital@0;1&display=swap");

:root {
  --glass: rgba(255, 255, 255, 0.199);
  --blue: blue;
}
body {
  box-sizing: border-box;
  margin: 3% 15%;
  padding: 0;
  font-family: "Space Mono";
  text-transform: lowercase;
  background-size: auto;
}

footer {
  text-align: right;
}

nav {
  margin-top: 3%;
}

.bio p,
nav p,
footer p {
  padding: 0.2rem;
  margin: 0;
  text-align: justify;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: syne;
}
a {
  color: black;
}
a:hover {
  color: var(--blue);
}

.writing-links {
  margin: initial;
  margin-bottom: 20%;
  padding: 0 0.2rem;
}

.caps {
  text-transform: none;
}
.rect {
  padding: 0.2rem;
  margin-top: 3%;
}
.rect h1,
.rect p {
  padding: 0;
  margin: 0;
}

img {
  width: 100%;
}
.one-a {
  filter: blur(0.8rem);
}
.rect p {
  margin-bottom: 1.5em;
}

.plink a,
summary {
  padding: 0.05em 0.5em;
  border: 1px solid black;
}

.plink a:hover,
summary:hover,
.home:hover {
  box-shadow: 2px 2px aqua;
}
summary {
  cursor: pointer;
  margin-bottom: 0.5rem;
}

.home {
  position: fixed;
  top: 0.5rem;
  right: 2%;
  border: 1px solid black;
  padding: 0em 0.3em 0.2em 0.3em;
  font-size: 1.1rem;
  background: white;
  transform: translateX(-1px);
}

@media (max-width: 650px) {
  body {
    font-size: 0.8rem;
    margin: 5% 2%;
  }
}

